--- a/my-app/src/styles/_movie.scss
+++ b/my-app/src/styles/_movie.scss
@@ -1,29 +1,108 @@
 .movie {
   @include flex();
 
+  .img-container {
+    width: 220px;
+    height: 330px;
+    display: inline-block;
+    vertical-align: top;
+    border-radius: 22px;
+    overflow: hidden;
+    box-shadow: $primary-color 10px 10px 50px;
+    transition: all 0.5s;
+
     img{
-      width: 220px;
-      height: 330px;
-      transition: all 0.3s;
-      margin-bottom: 1vh;
+      display: block;
+      max-width: 100%;
+      min-height: 100%;
+      border: none;
+    }
+  }
+
+  .img-container:hover {
+    box-shadow: $hover-color 10px 10px 50px;
+  }
+
+  h1 {
+    font-size: xxx-large;
+    color: $primary-color;
+  }
+
+  .movie-info {
+    text-align:justify;
+    width: calc(100% - 220px - 3em);
+    padding: 0 1em;
+    margin-left: 1em;
+
+    .movie-title {
+      h1 {
+        margin-bottom: 1rem;
+      }
+
+      .genres {
+        margin: 1.5em 0.5em 1em;
+      }
+
+      .genres > * {
+        background-color: rgba($color: $primary-color, $alpha: 0.35) ;
+        border: 1px solid rgba($color: $primary-color, $alpha: 0.7);
+        border-radius: 10px;
+        padding: 0.25em 0.6em;
+        margin-right: 0.5em;
+        font-size: small;
+        opacity: 90%;
+      }
     }
 
-      h1 {
-        font-size: xx-large;
-        color: $primary-color;
+      .additional-info {
+        @include flex-center();
+        margin-top: 2.5rem;
+        height: fit-content;
+
+          .play-btn {
+            background-color: $primary-color;
+            transition: all 0.5s;
+            a img{
+              filter: invert(100%);
+            }
+          }
+
+          .play-btn:hover {
+            background-color: $hover-color;
+            border: 2px solid $hover-color;
+          }
+
+          span {
+            font-size: small;
+            justify-content: flex-start;
+            opacity: 50%;
+            transform: rotate(-90deg);
+          }
       }
+
+      .additional-info > * {
+        @include flex-center();
+        border: 2px solid rgba($color: $primary-color, $alpha: 0.7);
+        border-radius: 20px;
+        padding: 0.5em;
+        margin-right: 0.5em;
+        font-size: x-large;
+        height: 4rem;
+        width: 10rem;
+      }
+    }
+
+    .annotation {
+      margin: 2rem 0;
 
       h2 {
-        color: $primary-color;
-        font-size: larger;
-      }
-      h3 {
-        margin: 1vh 0;
+        opacity: 50%;
+        margin-bottom: 0.5rem;
       }
 
-    .movieInfo {
-      text-align:justify;
-      width: calc(100% - 220px - 2em);
-      padding: 0 1em;
+      p {
+        font-size: small;
+        opacity: 80%;
+      }
     }
 }
