--- a/my-app/src/styles/_movies.scss
+++ b/my-app/src/styles/_movies.scss
@@ -1,4 +1,4 @@
-.moviesContainer {
+.movies-container {
   @include flex-center();
   flex-direction: column;
 
@@ -6,18 +6,20 @@
       align-self: flex-end;
       background-color: $background-color;
       color: $text-color;
-      border: 1px solid $primary-color;
+      border: 2px solid $primary-color;
       border-radius: 15px;
       margin-bottom: 1.5vh;
+      outline: none;
       font-family: $fonts;
       font-size: 2vh;
       padding: 0.6em;
-      transition: all 0.7s linear;
+      transition: border 0.5s linear;
     }
 
     input:hover,
-    input:focus{
-      outline: 2px solid $hover-color;
+    input:focus {
+      outline: none;
+      border: 2px solid $hover-color;
     }
 
     ::placeholder {
