--- a/my-app/src/styles/_buttons.scss
+++ b/my-app/src/styles/_buttons.scss
@@ -12,8 +12,7 @@ button {
 button:hover {
   border: 2px solid $hover-color;
   background-color: $hover-color;
-  transform: scale(1.3);
-  color: $text-color;
+  color: $background-color;
 }
 
 .scroll {
@@ -23,4 +22,16 @@ button:hover {
   bottom: 50px;
   right: 50px;
   background-color: $primary-color;
+}
+
+:disabled {
+  color: $primary-color;
+  cursor: copy;
+}
+
+:disabled:hover {
+  background-color: transparent;
+  border: 2px solid $primary-color;
+  color: $primary-color;
+  cursor: no-drop;
 }
