--- a/my-app/src/styles/_mixins.scss
+++ b/my-app/src/styles/_mixins.scss
@@ -9,6 +9,13 @@
   justify-content: center;
 }
 
+@mixin flex-center-column {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
