--- a/my-app/src/styles/_variables.scss
+++ b/my-app/src/styles/_variables.scss
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: 'BebasNeue';
-  src: url(../font/Raleway-Bold.ttf);
+  font-family: 'Bitter';
+  src: url(../font/Bitter-VariableFont_wght.ttf);
 }
 
-$fonts: 'BebasNeue', Helvetica, sans-serif;
+$font: "Bitter", Helvetica, serif;
 $background-color: #000;
 $primary-color: #6428cc;
 $text-color:#fff;
