--- a/my-app/src/styles/_cities.scss
+++ b/my-app/src/styles/_cities.scss
@@ -1,10 +1,10 @@
 #cities {
   background-color: transparent;
-  border: 1px solid $primary-color;
+  border: 2px solid $primary-color;
   border-radius: 10px;
   color: $text-color;
   cursor: pointer;
-  font-family: $fonts; 
+  font-family: $font; 
   padding: 0 1em;
 
   option {
