--- a/my-app/src/styles/_loader.scss
+++ b/my-app/src/styles/_loader.scss
@@ -7,6 +7,9 @@
   border-right: 3px solid transparent;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
+  position: absolute;
+  top: 15em;
+  left: 50%;
 }
 
 @keyframes rotation {
