--- a/my-app/src/styles/_modal.scss
+++ b/my-app/src/styles/_modal.scss
@@ -1,16 +1,14 @@
-.authorization {
+.authorization, .sign-in{
   @include flex-center-column();
 
-  .users-data {
+  .creating-account,
+  .alreadyRegistered {
     @include flex-center-column();
   }
 
-  .create-acc-btn {
-    @include flex-center();
-  }
-
-  .creating-account {
-    @include flex-center-column();
-
+  .alreadyRegistered {
+    p {
+      color: $hover-color;
+    }
   }
 }
