--- a/my-app/src/styles/index.scss
+++ b/my-app/src/styles/index.scss
@@ -9,12 +9,15 @@
 @import 'cinemas';
 @import 'cities';
 @import 'sign';
+@import 'notification';
+@import 'not-found';
+@import 'profile';
 
 body {
-  font-family: $fonts; 
-  background-color: $background-color;
+  font-family: $font; 
+  letter-spacing: .3px;
+  background-color: rgba($color: $background-color, $alpha: .9);
   color: $text-color;
-  padding: $spacing;
 
     a:hover {
       color: $hover-color;
@@ -22,14 +25,12 @@ body {
 }
 
 input{
-  align-self: flex-end;
-  background-color: $background-color;
+  background-color: transparent;
   color: $text-color;
   border: 2px solid $primary-color;
   border-radius: 15px;
   margin-bottom: 1.5vh;
   outline: none;
-  font-family: $fonts;
   font-size: 2vh;
   padding: 0.6em;
   transition: border 0.5s linear;
@@ -51,4 +52,8 @@ input:focus {
 ::placeholder {
   color: $text-color;
   opacity: 0.8;
+}
+
+#root {
+  position: relative
 }
