--- a/my-app/src/styles/_sign.scss
+++ b/my-app/src/styles/_sign.scss
@@ -1,7 +1,3 @@
-.wrong-passwords {
-  font-size: small;
-}
-
 .authorization-box {
   @include flex-center();
   width: 100%;
@@ -11,6 +7,40 @@
     padding: 2.5em;
     border-radius: 10px;
     border: 2px solid $primary-color;
+
+    .creating-account {
+      input {
+        width: 90%;
+      }
+
+      .password-content {
+        margin: 0 0 1.5vh 0;
+
+        .hints {
+          align-self: self-start;
+          font-size: 1.6vh;
+          margin: .5vh 0 0 0;
+          opacity: 50%;
+          padding: 0 0 0 .5vh
+        }
+      }
+
+      .sign-up-btn {
+        top: 1.5em;
+        font-weight: bold;
+        position: relative;
+      }
+
+      .sign-up-btn:hover {
+        border-color: $hover-color;
+        color: $hover-color;
+      }
+
+      .sign-up-btn[disabled]:hover {
+        border-color: $primary-color;
+        color: $primary-color;
+      }
+    }
   }
 
   button {
@@ -21,6 +51,7 @@
     color: $hover-color
   }
 }
+
 .sign-in {
   position:fixed;
   top:0;
@@ -28,16 +59,17 @@
   width:100vw;
   height:100vh;
   z-index: 2;
-  background-color: rgba($color: $background-color, $alpha: .7);
+  background-color: rgba($color: $background-color, $alpha: .9);
 
   .sign-in-content {
     @include flex-center-column();
     border-radius: 10px;
-    background-color: $text-color;
+    border: 1px solid $primary-color;
+    background-color: $background-color;
     padding: 1em;
 
     button {
-      color: $primary-color;
+      color: $text-color;
     }
     
     button:hover {
@@ -52,7 +84,7 @@
       width: 100%;
 
       span {
-        color: $primary-color;
+        color: $text-color;
       }
     }
 
@@ -61,13 +93,17 @@
 
       ::placeholder,
       input {
-        color: $primary-color;
+        color: $text-color;
+      }
+      
+      input {
+        width: 90%;
       }
     }
 
     .create-acc-btn {
       @include flex-center();
-      color: rgba($color: $background-color, $alpha: .7);
+      color: rgba($color: $text-color, $alpha: .8);
 
         p {
           font-size: small;
